# gitvisual

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  Makefile  PLAN.md  README.md  opencode.json  pyproject.toml
.beads/: metadata.json
.opencode/commands/: orchestrate.md
scripts/: agent-run.sh
src/gitvisual/: cli.py  config.py
src/gitvisual/git/: collector.py  models.py
src/gitvisual/llm/: summarizer.py
src/gitvisual/render/: card.py  components.py  themes.py
tests/: conftest.py  test_card_renderer.py  test_cli.py  test_config.py  test_git_collector.py  test_models.py  test_summarizer.py
